# zeek-tcp-writer

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  README  configure.plugin
scripts/: __preload__.zeek  init.bro  init.zeek
scripts/Writer/TCP/: __load__.bro  logs-to-tcp.bro  logs-to-tcp.zeek
src/: Plugin.cc  Plugin.h  TCP.cc  TCP.h  tcpwriter.bif
tests/: btest.cfg
tests/Baseline/tcpwriter.show-plugin/: output
tests/tcpwriter/: show-plugin.bro  show-plugin.zeek
